set .evo_c-carousel-border-nav container to position:relative with set height to prevent overlap of other elements

--- a/assets/stylesheets/components/evolution/minimalist_carousel_two/_minimalist_carousel_two.scss
+++ b/assets/stylesheets/components/evolution/minimalist_carousel_two/_minimalist_carousel_two.scss
@@ -5,6 +5,11 @@
   box-sizing: border-box;
 }
 
+.evo_c-carousel-border-nav{
+  position:relative;
+  min-height:375px;
+}
+
 .evo_c-carousel-border-nav__layer{
   position:absolute;
   margin:30px;
